打包时*Mapper.xml没有自动复制到class输出目录的mapper类包下

--- a/demo/src/main/resources/generator/jdbc.properties
+++ b/demo/src/main/resources/generator/jdbc.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://47.99.174.204:6060;DatabaseName=ImAdmin
-spring.datasource.username=NFHuangjm
-spring.datasource.password=ttt1234T
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/data
+jdbc.username=root
+jdbc.password=123456
