--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -134,17 +134,30 @@
 
         <resources>
             <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*Mapper.xml</include>
+                </includes>
+
+                <filtering>false</filtering>
+            </resource>
+            <resource>
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*Mapper.xml</include>
                 </includes>
+
+                <filtering>false</filtering>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**</include>
                 </includes>
+
+                <filtering>false</filtering>
             </resource>
+
         </resources>
     </build>
 
